--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,12 +16,13 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.11.4",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.510.0",
     "postcss": "^8.5.3",
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.0",
